--- a/d15/d15.cabal
+++ b/d15/d15.cabal
@@ -14,6 +14,8 @@ executable d15
       Paths_d15
   build-depends:
       base
+    , containers
+    , psqueues
     , text
     , vector
   default-language: Haskell2010
